--- a/punchin/core/templates/home.html
+++ b/punchin/core/templates/home.html
@@ -1,11 +1,10 @@
-{% load 'custom_filters' %}
 {% extends 'base.html' %}
-
 {% block content %}
-<div class="conteiner">
+<div class="conteiner flex flex-col mt-5">
     <div class="row">
         <div class="col-md-12">
-            <h1>Punchin</h1>
+            <h1 class="text-lg">Punchin</h1>
+           
         </div>
     </div>
     <div class="row">
