--- a/punchin/core/templates/base.html
+++ b/punchin/core/templates/base.html
@@ -2,11 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Punchin</title>
     <script src="https://unpkg.com/feather-icons"></script>
-
+  <!-- <style>
+    @media print {
+      body * {
+        opacity: 0;
+      }
+      #print-section, #print-section * {
+        opacity: 1 !important;
+      }
+    }
+  </style> -->
     {% block head %}{% endblock %}
 </head>
 <body class="flex justify-center w-full h-screen bg-slate-100">
@@ -25,6 +33,62 @@
             link.classList.add('text-indigo-800', 'border-indigo-600', 'font-semibold', 'border-b-4');
           }
         });
+
+       // Get the modal and overlay
+        function openModal(el) {
+            var modal = document.getElementById(el);
+            modal.classList.remove("hidden");
+            overlay.classList.remove("hidden");
+   
+        }
+         function closeModal(el) {
+            var modal = document.getElementById(el);
+            modal.classList.add("hidden");
+            overlay.classList.add("hidden");
+        }
+        overlay.onclick = function() {
+            var modal = document.getElementById(el);
+            modal.classList.add("hidden");
+            overlay.classList.add("hidden");
+        }
+       
+     
+
+        function printSection(sectionId) {
+          var printContents = document.getElementById(sectionId).innerHTML;
+          var originalContents = document.body.innerHTML;
+          document.body.innerHTML = printContents;
+          window.print();
+          document.body.innerHTML = originalContents;
+        }
+
+        
+        function allowDrop(ev) {
+          ev.preventDefault();
+      }
+  
+      function drag(ev) {
+          ev.dataTransfer.setData("shiftData", ev.target.id);
+      }
+  
+      function drop(ev) {
+          ev.preventDefault();
+          var data = ev.dataTransfer.getData("shiftData");
+          var draggedElement = document.getElementById(data);
+          console.log(ev.target.children.length)
+          if (ev.target.tagName === "TD" && ev.target.children.length === 1) {
+              if (ev.shiftKey || ev.altKey) { 
+                  var clonedElement = draggedElement.cloneNode(true); 
+                  clonedElement.id = "cloned_" + data;
+                  ev.target.
+                  ev.target.appendChild(clonedElement); 
+              } else {
+                  ev.target.appendChild(draggedElement); 
+              }
+          }
+      }
+      
+  
       </script>
 </body>
 </html>
