--- a/punchin/core/templates/home.html
+++ b/punchin/core/templates/home.html
@@ -14,14 +14,14 @@
                 <a href="{% url 'login' %}" class="p-2 bg-slate-900 text-white rounded mt-5 px-5">Login</a>
                 <a href="{% url 'signup' %}" class="p-2 bg-green-600 text-white rounded mt-5 px-5">Sign up</a>
             {% else %}
-                <form class="form-inline bg-gray-200 p-3 rounded">
+                <div class="flex bg-gray-200 p-3 rounded gap-3">
                     <span class="mr-4">{{ request.user.email }}</span>
                     <a href="/dashboard" class="p-2 bg-slate-600 text-white rounded mt-5 px-5">Dashboard</a>
                     <form action="{% url 'logout' %}" method="post">
                         {% csrf_token %}
                         <button type="submit" class="p-2 bg-slate-600 text-white rounded mt-5 px-5">Logout</button>
                     </form>
-                </form>
+                </div>
             {% endif %}
         </div>
     </div>
