--- a/punchin/core/templates/base.html
+++ b/punchin/core/templates/base.html
@@ -18,7 +18,10 @@
     {% block head %}{% endblock %}
 </head>
 <body class="flex justify-center w-full h-screen bg-slate-100">
+  
     {% block content %}{% endblock %}
+    <div id="overlay" class="fixed inset-0 bg-black bg-opacity-60 hidden"></div>
+
 
     <script>
       feather.replace();
@@ -75,7 +78,6 @@
           ev.preventDefault();
           var data = ev.dataTransfer.getData("shiftData");
           var draggedElement = document.getElementById(data);
-          console.log(ev.target.children.length)
           if (ev.target.tagName === "TD" && ev.target.children.length === 1) {
               if (ev.shiftKey || ev.altKey) { 
                   var clonedElement = draggedElement.cloneNode(true); 
@@ -93,6 +95,13 @@
           this.reset();
         }
 
+      }
+      
+      function saveShift(event) {
+        event.preventDefault(); // Block the form submission
+        var formData = new FormData(event.target);
+        var formDataJson = JSON.stringify(Object.fromEntries(formData));
+        console.table(formDataJson);
       }
   
       </script>
