reverted to the old shedule creations form

--- a/punchin/core/templates/base.html
+++ b/punchin/core/templates/base.html
@@ -97,13 +97,13 @@
 
       }
       
-      function saveShift(event) {
+     /* function saveShift(event) {
         event.preventDefault(); // Block the form submission
         var formData = new FormData(event.target);
         var formDataJson = JSON.stringify(Object.fromEntries(formData));
         console.table(formDataJson);
       }
-  
+  */
       </script>
 </body>
 </html>
