--- a/punchin/core/templates/dashboard/schedule.html
+++ b/punchin/core/templates/dashboard/schedule.html
@@ -107,7 +107,8 @@
                             </div>
                             <!-- Modal Body -->
                             <div class="p-6">
-                                <form class="max-w-sm mx-auto" method="POST" action="{% url 'schedules' %}" onsubmit="saveShift(event)">
+                                <form class="max-w-sm mx-auto" method="POST" action="{% url 'schedules' %}">
+                                    {% csrf_token %}
                                     <input value="{{employee.id}}" name="employee" type="hidden" id="employeeId">
                                     <input  name="date" type="hidden" value="{{schedule_obj.date |date:'Y-m-d'}}">
                                     <div class="mb-5 grid grid-cols-2 gap-2 ">
