--- a/punchin/core/templates/dashboard/schedule.html
+++ b/punchin/core/templates/dashboard/schedule.html
@@ -41,7 +41,7 @@
             <div class="flex gap-3 justify-center items-center" >
                 <button class=" flex rounded gap-1 mx-2" onclick="printSection('print-section')"><span data-feather="printer" ></span></button>
 
-                <button class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Publish</button>
+                <button class="bg-indigo-500 flex items-center justify-center gap-2 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">  Nofify <span data-feather="bell" width="20"></span></button>
 
             </div>
        
