--- a/punchin/core/templates/dashboard/employees.html
+++ b/punchin/core/templates/dashboard/employees.html
@@ -21,7 +21,7 @@
             </div>
             <input type="text" id="search-navbar" class="block w-full p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500" placeholder="Search...">
           </div>
-        <button href="#addEmployeeModal" class="bg-indigo-600 text-white hover:indigo-900 px-6 py-2 rounded flex justify-between" id="openModal" onclick="openModal('employeeModal')"><span data-feather="plus" ></span> <span class="mx-3">Add Employee</span></button>
+        <button href="#addEmployeeModal" class="bg-indigo-500 text-white hover:indigo-900 px-6 py-2 rounded flex justify-between" id="openModal" onclick="openModal('employeeModal')"><span data-feather="plus" ></span> <span class="mx-3">Add Employee</span></button>
     </div>
     <div class="body">
         
@@ -113,47 +113,47 @@
                     <div class="grid gap-2 grid-cols-2">
         
                         <div class="mb-3">
-                        <label for="first_name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">First name</label>
-                        <input type="text" id="first_name" name="first_name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required />
+                        <label for="first_name" class="block mb-2 text-sm font-medium text-gray-900">First name</label>
+                        <input type="text" id="first_name" name="first_name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5" required />
                         </div>
                         <div class="mb-3">
-                            <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Last name</label>
-                            <input type="text" id="last_name" name="last_name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required />
+                            <label for="email" class="block mb-2 text-sm font-medium text-gray-900 ">Last name</label>
+                            <input type="text" id="last_name" name="last_name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5" required />
                         </div>
                     </div>
         
                     <div class="grid gap-2 grid-cols-2">
         
                         <div class="mb-3">
-                        <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email</label>
-                        <input type="text" id="email" name="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required />
+                        <label for="email" class="block mb-2 text-sm font-medium text-gray-900 ">Email</label>
+                        <input type="text" id="email" name="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5" required />
                         </div>
                         <div class="mb-3">
-                            <label for="phone" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Phone</label>
-                            <input type="tel" id="phone" name="phone_number" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required />
+                            <label for="phone" class="block mb-2 text-sm font-medium text-gray-900 ">Phone</label>
+                            <input type="tel" id="phone" name="phone_number" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5" required />
                         </div>
                     </div>
         
                     <div class="flex justify-between">
                         <div class="mb-3 w-full">
-                        <label for="address" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Address</label>
-                        <input type="text" id="address" name="address" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required />
+                        <label for="address" class="block mb-2 text-sm font-medium text-gray-900 ">Address</label>
+                        <input type="text" id="address" name="address" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5" required />
                         </div>
                     </div>
                     <div class="grid gap-2 grid-cols-2">
                         <div class="mb-3">
-                            <label for="hourly_rate" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"> Hourly rate</label>
-                            <input type="number" step="0.01" id="hourly_rate" name="hourly_rate" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required />
+                            <label for="hourly_rate" class="block mb-2 text-sm font-medium text-gray-900 "> Hourly rate</label>
+                            <input type="number" onkeyup="setRate(event)" step="0.01" id="hourly_rate" name="hourly_rate" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5" required />
                         </div>
                         <div class="mb-3 ">
-                            <label for="overtime_hourly_rate" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Overtime hourly rate</label>
-                            <input type="number"  step="0.01" id="overtime_hourly_rate" name="overtime_hourly_rate" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required />
+                            <label for="overtime_hourly_rate" class="block mb-2 text-sm font-medium text-gray-900 ">Overtime hourly rate</label>
+                            <input type="number"  step="0.01" id="overtime_hourly_rate" name="overtime_hourly_rate" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5" required />
                         </div>
                     </div>
                     <div class="">
                         <div class="mb-3">
-                            <label for="position" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Select position</label>
-                            <select id="position" name="position" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                            <label for="position" class="block mb-2 text-sm font-medium text-gray-900 ">Select position</label>
+                            <select id="position" name="position" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5">
                                 {% for position in organization.positions.all %}
                                 <option value="{{position.id}}">{{position.name}}</option>
                                 {% endfor %}
