strated work on punchin

--- a/punchin/core/templates/staff/clock.html
+++ b/punchin/core/templates/staff/clock.html
@@ -1,11 +1,11 @@
 {% extends './staff_base.html' %}
 {% block content %}
     <div class="container flex items-center justify-between flex-col gap-6 min-h-96 text-stone-600">
-        <div class="bg-white p-2 w-full flex gap-3 justify-between items-center rounded-md px-3">
+        <!-- <div class="bg-white p-2 w-full flex gap-3 justify-between items-center rounded-md px-3">
             <span class="font-semibold"><i data-feather="map-pin"></i> </span>
             <p id="address" class="text-xs text-gray-600">Fetching current location...</p>
         </div>
-    
+     -->
         <h2 class="text-center w-full font-light text-stone-900">Today. Tue Mar 5 <br> <span
                 class="text-center w-full font-semibold text-stone-700">12:40 PM</span></h2>
     
