--- a/punchin/core/templates/staff/clock.html
+++ b/punchin/core/templates/staff/clock.html
@@ -6,37 +6,50 @@
             <p id="address" class="text-xs text-gray-600">Fetching current location...</p>
         </div>
      -->
-        <h2 class="text-center w-full font-light text-stone-900">Today. Tue Mar 5 <br> <span
+        <h2 class="text-center w-full font-light text-stone-900">Today. {{today |date:'D m d'}} <br> <span
                 class="text-center w-full font-semibold text-stone-700">12:40 PM</span></h2>
-    
-        <button
-            class="h-40 w-40 rounded-full bg-slate-500 font-bold text-white p-6 shadow-xl flex items-center justify-center hover:bg-slate-600 active:bg-slate-600 active:shadow-2xl">Punch
-            In </button>
-    
-            
+        {% if schedule is None %}  
+        <h2 class="text-lg font-semibold">
+            NO SHIFT AVAILABLE
+        </h2>
+        {% endif %}
+        <form method="post" action="{% url 'punch_in_out'%}">
+            {% csrf_token %}
+            <input type="hidden" name="schedule_id" value="{{schedule.id}}">
+            <button type="button"
+                class="h-40 w-40 rounded-full font-bold text-white p-6 shadow flex items-center justify-center {% if schedule is None %} bg-slate-300 cursor-not-allowed{% else %} hover:bg-slate-600 active:shadow-2xl bg-slate-500 {% endif %}" {% if schedule is None %}disabled{% endif %}>Punch
+                In </button>
+        </form>
+                
 
 
-            <p>Punched in </p>
-
-            <div class="w-full">
+            <!-- <div class="w-full">
                 <h2 class="text-xs mb-1 font-bold text-center w-full uppercase text-slate-600">Current Hours</h2>
                 <div class="w-full rounded-md px-3 p-2 text-center">
                     <div class=""><span class="text-2xl font-bold"> 0 </span> <span class="text-slate-500 text-md"> H </span> <span class="text-2xl font-bold"> 10 </span> <span class="text-slate-500"> M </span></div>
                 </div>
-            </div>
+            </div> -->
 
-
-        <div class="w-full">
-            <h2 class="text-xs mb-1 font-bold text-left w-full">UPCOMING SHIFT</h2>
-            <div class="w-full bg-white rounded-md px-3 p-2">
-                <div class="w-full flex gap-3 justify-between">
-                    <span class=" text-stone-800">Tuesday 5</span> <span class="font-semibold">8 hrs</span><span
-                        class="flex gap-2 items-center justify-center text-xs"> 8:00 AM <span
-                            class="text-slate-300">to</span> 4:00 PM</span>
+            {% if schedule %}
+                <div class="w-full">
+                    <h2 class="text-xs mb-1 font-bold text-left w-full uppercase">Shift</h2>
+                    <div class="w-full bg-white rounded-md px-3 p-2">
+                        <div class="w-full flex gap-3 justify-between">
+                            <span class=" text-stone-800">{{ schedule.date |date:"D m d"}}</span> <span class="font-normal">{{ schedule.shift.hours}} hrs</span><span
+                                class="flex gap-2 items-center justify-center text-xs"> {{ schedule.shift.start_time|time:"H:i"}} <span
+                                    class="text-slate-300">to</span> {{ schedule.shift.end_time|time:"H:i"}}</span>
+                        </div>
+                        
+                                <div class="w-full flex gap-3 justify-between items-center mt-2">
+                                    <span class="font-semibold"><i data-feather="map-pin"></i> </span>
+                                    <address id="address" class="text-xs text-gray-600">    <a href="https://www.google.com/maps/search/?api=1&query={{ schedule.location.address }}" target="_blank">{{ schedule.location.address }}</a>
+                                    </address>
+                                </div>
+                    </div>
                 </div>
-                <p class="text-xs my-2 text-sm flex gap-2 items-center text-stone-500"><i data-feather="map-pin"
-                        class="w-3"></i>2605 5th Ave E, North Saint Paul, MN 55109 </p>
-            </div>
-        </div>
+                <input type="hidden" value="{{schedule.location.longitude}}" id="longitude">
+                <input type="hidden" id="latitude" value="{{schedule.location.latitude}}">
+                
+            {% endif %}
     </div>
 {% endblock content%}
