--- a/punchin/core/templates/base.html
+++ b/punchin/core/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <script src="https://cdn.tailwindcss.com"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Punchin</title>
     <script src="https://unpkg.com/feather-icons"></script>
   <!-- <style>
