--- a/punchin/core/templates/staff/staff_base.html
+++ b/punchin/core/templates/staff/staff_base.html
@@ -105,7 +105,7 @@
       const currentLon = -74.0060;  // Example longitude of current location
       const targetLat = 40.730610;  // Example latitude of target location
       const targetLon = -73.935242;  // Example longitude of target location
-      const isWithinRadius = withinRadius(currentLat, currentLon, targetLat, targetLon);
+      //const isWithinRadius = withinRadius(currentLat, currentLon, targetLat, targetLon);
       
      
 
