--- a/punchin/core/templates/staff/clock.html
+++ b/punchin/core/templates/staff/clock.html
@@ -23,12 +23,12 @@
                 
 
 
-            <!-- <div class="w-full">
+         <div class="w-full">
                 <h2 class="text-xs mb-1 font-bold text-center w-full uppercase text-slate-600">Current Hours</h2>
                 <div class="w-full rounded-md px-3 p-2 text-center">
                     <div class=""><span class="text-2xl font-bold"> 0 </span> <span class="text-slate-500 text-md"> H </span> <span class="text-2xl font-bold"> 10 </span> <span class="text-slate-500"> M </span></div>
                 </div>
-            </div> -->
+            </div>
 
             {% if schedule %}
                 <div class="w-full">
