--- a/punchin/core/templates/dashboard/employees.html
+++ b/punchin/core/templates/dashboard/employees.html
@@ -16,15 +16,19 @@
             </div>
          
             
-            <div class="flex gap-2">
+            <div class="flex gap-2" v-show="selectedEmployee">
                 <button href="#updateEmployeeModal" class="bg-gray-400 text-white hover:bg-slate-700 flex items-center space-x-2 px-6 py-2 rounded" id="openModal" onclick="openModal('updateEmployeeModal')">
                   <span data-feather="edit"></span>
                   <span>Edit</span>
                 </button>
-                <button href="#addEmployeeModal" class="bg-gray-400 text-white hover:bg-slate-700 flex items-center space-x-2 px-6 py-2 rounded" id="openModal" onclick="openModal('employeeModal')">
-                  <span data-feather="trash-2"></span>
-                  <span>Delete</span>
-                </button>
+                <form action="{% url 'delete_employee' %}" method="post">
+                    {% csrf_token %}
+                    <input type="hidden" :value="selectedEmployee?.id" name="id" />
+                    <button type="submit" class="bg-gray-400 text-white hover:bg-slate-700 flex items-center space-x-2 px-6 py-2 rounded" onclick="deleteEmployee(event)">
+                    <span data-feather="trash-2"></span>
+                    <span>Delete</span>
+                    </button>
+                </form>
               </div>
               
 
@@ -90,7 +94,7 @@
                                             email:'{{employee.user.email}}',
                                             phone_number:'{{employee.phone_number}}',
                                             address:'{{employee.address}}',
-                                            position:'{{employee.position}}',
+                                            position:{id:'{{employee.position.id}}',name:'{{employee.position}}'},
                                             id:'{{employee.id}}',
                                             hourly_rate:'{{employee.hourly_rate}}',
                                             overtime_hourly_rate:'{{employee.overtime_hourly_rate}}'
@@ -129,7 +133,7 @@
 
         </div>
     </div>
-</div>
+
 <!-- Modal -->
 <div id="employeeModal" class="fixed z-10 inset-0 overflow-y-auto hidden">
     <div class="flex items-center justify-center min-h-screen">
@@ -254,20 +258,22 @@
             </div>
             <!-- Modal Body -->
             <div class="p-6">
-                <form class="max-w-sm mx-auto" method="POST" action="{% url 'employee' %}">
+                <form class="max-w-sm mx-auto" method="POST" action="{% url 'update_employee' %}">
                     {% csrf_token %}
                     <div class="grid gap-2 grid-cols-2">
-
+                    <input type="hidden" :value="selectedEmployee?.id" name="id">
                         <div class="mb-3">
                             <label for="first_name" class="block mb-2 text-sm font-medium text-gray-900">First
                                 name</label>
                             <input type="text" id="first_name" name="first_name"
+                            :value="selectedEmployee?.first_name"
                                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5"
                                 required />
                         </div>
                         <div class="mb-3">
                             <label for="email" class="block mb-2 text-sm font-medium text-gray-900 ">Last name</label>
                             <input type="text" id="last_name" name="last_name"
+                            :value="selectedEmployee?.last_name"
                                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5"
                                 required />
                         </div>
@@ -278,12 +284,14 @@
                         <div class="mb-3">
                             <label for="email" class="block mb-2 text-sm font-medium text-gray-900 ">Email</label>
                             <input type="text" id="email" name="email"
+                            :value="selectedEmployee?.email"
                                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5"
                                 required />
                         </div>
                         <div class="mb-3">
                             <label for="phone" class="block mb-2 text-sm font-medium text-gray-900 ">Phone</label>
                             <input type="tel" id="phone" name="phone_number"
+                            :value="selectedEmployee?.phone_number"
                                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5"
                                 required />
                         </div>
@@ -293,6 +301,7 @@
                         <div class="mb-3 w-full">
                             <label for="address" class="block mb-2 text-sm font-medium text-gray-900 ">Address</label>
                             <input type="text" id="address" name="address"
+                            :value="selectedEmployee?.address"
                                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5"
                                 required />
                         </div>
@@ -303,13 +312,14 @@
                                 rate</label>
                             <input type="number" onkeyup="setRate(event)" step="0.01" id="hourly_rate"
                                 name="hourly_rate"
+                                :value="selectedEmployee?.hourly_rate"
                                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5"
                                 required />
                         </div>
                         <div class="mb-3 ">
                             <label for="overtime_hourly_rate"
                                 class="block mb-2 text-sm font-medium text-gray-900 ">Overtime hourly rate</label>
-                            <input type="number" step="0.01" id="overtime_hourly_rate" name="overtime_hourly_rate"
+                            <input type="number" step="0.01" name="overtime_hourly_rate" :value="selectedEmployee?.overtime_hourly_rate"
                                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5"
                                 required />
                         </div>
@@ -320,6 +330,7 @@
                                 position</label>
                             <select id="position" name="position"
                                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1.5">
+                                <option :value="selectedEmployee?.position?.id">[[ selectedEmployee?.position?.name ]]</option>
                                 {% for position in organization.positions.all %}
                                 <option value="{{position.id}}">{{position.name}}</option>
                                 {% endfor %}
