--- a/punchin/core/templates/dashboard/positions.html
+++ b/punchin/core/templates/dashboard/positions.html
@@ -4,7 +4,7 @@
 <div id="locationApp">
     <div class="container rounded bg-white mt-4 shadow min-h-96 w-full">
 
-        <div class="header mb-5 text-center p-4 flex justify-between items-center">
+        <div class="header mb-5 text-center p-4 flex justify-between items-center min-w-[400px]">
             <div>
             </div>
          
@@ -84,7 +84,7 @@
         <div class="bg-white rounded-lg overflow-hidden shadow-xl">
             <!-- Modal Header -->
             <div class="bg-gray-200 py-4 px-6 flex justify-between items-center">
-                <h2 class="text-lg text-gray-600 font-bold">Add Location</h2>
+                <h2 class="text-lg text-gray-600 font-bold">Add Position</h2>
                 <button id="closeModal" onclick="closeModal('addPositionModal')"
                     class="text-gray-600 hover:text-gray-700 focus:outline-none">
                     <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
